<resources>
    <string name="app_name">GymFree</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chat">Chat</string>
    <string name="hint_location">Location Name</string>
    <string name="hint_address">Address (123 Park Avenue, New York)</string>
    <string name="text_location_name">Select a title for this location. Your members will be able to see the title of the gym.</string>
    <string name="text_location_capacity"> Choose the capacity for this location. The capacity is the maximum number of members that may use the gym per hour.</string>
    <string name="text_location_address"> Write down the address of the location, including the street number, street name, and city.</string>
    <string name="owner_email">owner@example.com</string>
    <string name="owner_uid">x3or1FXSFFNyylZZeq4BkQnG3sf2</string>
</resources>